@@ -5,6 +5,7 @@ unburden-home-dir (0.3.3+dev) UNRELEASED; urgency=medium
   * Declare compliance with Debian Policy 3.9.6 (no other changes needed)
   * Update copyright years in debian/copyright.
   * Rename debian/unburden-home-dir.* to debian/* for consistency.
+  * Extract common logic for Xsession.d files into a separate file.
 
  -- Axel Beckert <abe@debian.org>  Fri, 13 Mar 2015 13:11:26 +0100
 
